# rabbitviewer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  config.yaml.example  install.sh  main.py  pyproject.toml  rabbitviewer.desktop  rabbitviewer_daemon.py  requirements.txt
benchmarks/: bench_first_image.py  bench_sessions.py  bench_thumbnail.py  bench_utils.py  plugin_benchmarks.py
cli/: copy_selected.py  daemon.py  move_selected.py  rabbit.py  send_stop_signal.py  stop.py  viewer.py
config/: config_manager.py  hotkeys.py
core/: background_indexer.py  cache_size_manager.py  comfyui_client.py  directory_scanner.py  event_system.py  file_ops.py  heatmap.py  metadata_database.py  priority.py  rendermanager.py  selection.py  thumbnail_manager.py
docs/: ai_image_editing.md  inspector_view_behaviour.md  startup.md  startup_performance.md  testing.md
filewatcher/: watcher.py
gui/: comfyui_dialog.py  filter_dialog.py  hotkey_help_overlay.py  hotkey_manager.py  inspector_view.py  main_window.py  menu_registry.py  metadata_cache.py  modal_menu.py  overlay_manager.py  overlay_renderers.py  picture_base.py  picture_view.py  status_bar.py  tag_editor_dialog.py  tag_filter_dialog.py  thumbnail_view.py  video_view.py
network/: _framing.py  daemon_signals.py  gui_client.py  gui_server.py  notification_client.py  protocol.py  socket_client.py  socket_thumbnailer.py
plugins/: __init__.py  base_plugin.py  cr3_plugin.py  exiftool_process.py  pil_plugin.py  raw_plugin.py  video_plugin.py
scripts/: delete_selected.py  invert_selection.py  (+14 more)
(+55 files in other folders)
